--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -19,3 +19,13 @@ header h1 {
   font-weight: 500;
   text-align: center;
 }
+
+main {
+  width: 100%;
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+section {
+  padding: 15px;
+}
