--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,5 @@
+@use 'vars';
+
 * {
   margin: 0;
   padding: 0;
@@ -6,26 +8,26 @@
 
 body {
   font-family: 'montserrat', sans-serif;
-  background-color: #223343;
+  background-color: vars.$background-color;
 }
 
-header {
-  padding: 50px 15px 0px;
+.header {
+  padding: 4em 1em 0em;
 }
 
-header h1 {
-  color: #FFF;
+.header__title {
+  color: vars.$color-light;
   font-size: 48px;
   font-weight: 500;
   text-align: center;
 }
 
-main {
+.main {
   width: 100%;
-  max-width: 960px;
+  max-width: 70em;
   margin: 0 auto;
 }
 
 section {
-  padding: 15px;
+  padding: 1em;
 }
