--- a/src/styles/popup.scss
+++ b/src/styles/popup.scss
@@ -34,19 +34,20 @@
     margin-bottom: 3em;
 }
 
-.popup__content__plot {
+.popup__content__synopsis {
     display: flex;
     flex-wrap: wrap;
     margin: 0em -1em 3em;
+    color: white;
 }
 
-.popup__content__plot__img {
+.popup__content__synopsis__img {
     flex: 1 1 50%;
     max-width: 30em;
     padding: 0em 1em;
 }
 
-.popup__content__plot__text {
+.popup__content__synopsis__text {
     flex: 1 1 50%;
     padding: 1em;
 }
