--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,12 +1,22 @@
 @use 'vars';
 
-.header {
+  .header {
     padding: 4em 1em 0em;
+    color: vars.$header-title-color;
+    text-align: center;
   }
   
   .header__title {
-    color: vars.$color-light;
-    font-size: 48px;
+    font-size: 3em;
     font-weight: 500;
-    text-align: center;
+  }
+
+  .header__title__strong {
+    color: vars.$header-strong-color;
+  }
+
+  .header__subtitle {
+    margin: 1em;
+    font-style: italic;
+    color: vars.$header-subtitle-color;
   }
