--- a/src/styles/searchbar.scss
+++ b/src/styles/searchbar.scss
@@ -13,12 +13,13 @@
     border-radius: 0.5em;
   
     color: vars.$searchbox-placeholder-color;
-    font-size: vars.$title-font-size;
+    font-size: vars.$serachbox-title-font-size;
     font-weight: 300;
+    cursor: pointer;
   
     transition: 0.4s ease-out;
   }
 
 .searchbox:focus {
-    box-shadow: vars.$searchbox-focus;
+    box-shadow:  0em 0em 0.5em 0.2em vars.$searchbox-focus-color;
 }
