--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -10,7 +10,7 @@ $header-subtitle-color:#2a9d8f;
 
 $searchbox-placeholder-color: #2a9d8f;
 $searchbox-focus-color: #2a9d8f;
-$serachbox-title-font-size: 20px;
+$searchbox-font-size: 20px;
 
 // COLORS
 
@@ -32,7 +32,7 @@ $result-border-color: #e9c46a;
 // POPUP
 
 //$popup-title-background-color:#335474;
-$popup-title-background-color:rgba(22, 20, 37, 0.9);;
+$popup-title-background-color:rgba(22, 20, 37, 0.95);
 $popup-content-text: #e9c46a;
 $popup-content-type: #e76f51;
 
