--- a/src/styles/results.scss
+++ b/src/styles/results.scss
@@ -26,6 +26,7 @@
     font-weight: 600;
     padding: 1em;
     background: vars.$result-title-background-color;
+    background-position: 20%; ;
     flex: 1 1 100%;
     transition: 0.4s ease-out;
 }
