--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -11,7 +11,7 @@ $header-subtitle-color:#2a9d8f;
 $searchbox-placeholder-color: #2a9d8f;
 $searchbox-focus-color: #2a9d8f;
 $searchbox-font-size: 20px;
-
+$searchbox-infos-color: #2a9d8f;
 // COLORS
 
 $color-light: #FFF;
@@ -32,8 +32,8 @@ $result-border-color: #e9c46a;
 // POPUP
 
 //$popup-title-background-color:#335474;
-$popup-title-background-color:rgba(22, 20, 37, 0.95);
-$popup-content-text: #e9c46a;
+$popup-title-background-color:rgba(54, 54, 54, 0.97);
+$popup-content-text: #cfcabc;
 $popup-content-type: #e76f51;
 
 // POPUP BUTTON
