--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -5,14 +5,18 @@
     color: vars.$header-title-color;
     text-align: center;
 
-    background-image: url(https://images.alphacoders.com/596/596630.jpg);
-    background-position: 20%;
+    background-image: url(https://images7.alphacoders.com/703/703704.jpg);
+    background-position: 63% 20%;
     overflow: hidden;
+
+    background-size: auto;
   }
   
   .header__title {
     font-size: 3em;
     font-weight: 500;
+    padding: 1em;
+    text-align: center;
   }
 
   .header__title__strong {
@@ -23,4 +27,5 @@
     margin: 1em;
     font-style: italic;
     color: vars.$header-subtitle-color; 
+    text-align: center;
   }
