--- a/src/styles/searchbar.scss
+++ b/src/styles/searchbar.scss
@@ -24,3 +24,11 @@
 .searchbox:focus {
     box-shadow:  0em 0em 0.5em 0.2em vars.$searchbox-focus-color;
 }
+
+.searchbox__infos {
+  color: vars.$searchbox-infos-color;
+  margin-top: 1em;
+  font-style: italic;
+  
+  text-align: center;
+}
